; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_smart.c_git_smart__get_push_stream.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_smart.c_git_smart__get_push_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32, i32, i32*, i64, i32, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 (i32**, %struct.TYPE_7__*, i32, i32)* }

@GIT_DIRECTION_PUSH = common dso_local global i64 0, align 8
@GIT_ERROR_NET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"this operation is only valid for push\00", align 1
@GIT_SERVICE_RECEIVEPACK = common dso_local global i32 0, align 4
@git_smart__recv_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_smart__get_push_stream(%struct.TYPE_6__* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32** %1, i32*** %5, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 4
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = call i64 @git_smart__reset_stream(%struct.TYPE_6__* %12, i32 0)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i32 -1, i32* %3, align 4
  br label %71

16:                                               ; preds = %11, %2
  %17 = load i64, i64* @GIT_DIRECTION_PUSH, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %17, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %16
  %23 = load i32, i32* @GIT_ERROR_NET, align 4
  %24 = call i32 @git_error_set(i32 %23, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %71

25:                                               ; preds = %16
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 6
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %30 = load i32 (i32**, %struct.TYPE_7__*, i32, i32)*, i32 (i32**, %struct.TYPE_7__*, i32, i32)** %29, align 8
  %31 = load i32**, i32*** %5, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 6
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %33, align 8
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 5
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* @GIT_SERVICE_RECEIVEPACK, align 4
  %39 = call i32 %30(i32** %31, %struct.TYPE_7__* %34, i32 %37, i32 %38)
  store i32 %39, i32* %6, align 4
  %40 = icmp slt i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %25
  %42 = load i32, i32* %6, align 4
  store i32 %42, i32* %3, align 4
  br label %71

43:                                               ; preds = %25
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 4
  %46 = load i64, i64* %45, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %55, label %48

48:                                               ; preds = %43
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %49, i32 0, i32 3
  %51 = load i32*, i32** %50, align 8
  %52 = load i32**, i32*** %5, align 8
  %53 = load i32*, i32** %52, align 8
  %54 = icmp eq i32* %51, %53
  br label %55

55:                                               ; preds = %48, %43
  %56 = phi i1 [ true, %43 ], [ %54, %48 ]
  %57 = zext i1 %56 to i32
  %58 = call i32 @assert(i32 %57)
  %59 = load i32**, i32*** %5, align 8
  %60 = load i32*, i32** %59, align 8
  %61 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %61, i32 0, i32 3
  store i32* %60, i32** %62, align 8
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 2
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %66 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i32 0, i32 1
  %67 = load i32, i32* %66, align 8
  %68 = load i32, i32* @git_smart__recv_cb, align 4
  %69 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %70 = call i32 @gitno_buffer_setup_callback(i32* %64, i32 %67, i32 4, i32 %68, %struct.TYPE_6__* %69)
  store i32 0, i32* %3, align 4
  br label %71

71:                                               ; preds = %55, %41, %22, %15
  %72 = load i32, i32* %3, align 4
  ret i32 %72
}

declare dso_local i64 @git_smart__reset_stream(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @git_error_set(i32, i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @gitno_buffer_setup_callback(i32*, i32, i32, i32, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
